{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerMap",
            "id": "d82c346e-7fff-4caf-aedb-af74101bd722",
            "actions": [
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "c46cdd2f-3759-4f07-9bfc-9cd4a9e2029e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "a8afc5c6-81ac-4ffc-b29c-f3229961d218",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnterForm1",
                    "type": "Button",
                    "id": "780aa540-8c34-4fcf-a9bd-5322b4631f80",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnterForm2",
                    "type": "Button",
                    "id": "7b5e81ce-228f-41f9-a41b-679f600c312e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnterForm3",
                    "type": "Button",
                    "id": "155a4a90-0759-421b-bf29-72a89dfba693",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Strike",
                    "type": "Button",
                    "id": "4d6134a2-c243-482b-98cc-9caf1bb869ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "45fb590b-f87f-479c-8856-bb7efc94c1a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4dbefda2-e4f9-488d-aade-e15f7007eec9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a446b3b5-678d-433d-a8e9-d73dc9f273c0",
                    "path": "<Joystick>/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32671fad-a9a9-4faa-8145-afdaa01671d1",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f18229a-2172-4d21-9db1-cd178dd55c5a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f8b2090-5719-40a7-bae3-9a63a3a9a58a",
                    "path": "<Joystick>/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9094ab65-dbe9-4519-8605-acc826ac00f8",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c920689-9c48-406a-9100-63e2365e2977",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnterForm1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71b9b739-34c5-4e9e-a994-b6ff7276876d",
                    "path": "<HID::ASTRO Gaming ASTRO C40>/button8",
                    "interactions": "Press(pressPoint=0.1)",
                    "processors": "",
                    "groups": "",
                    "action": "EnterForm1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d319f550-a00e-4d67-831d-904bee9fdeb1",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press(pressPoint=0.1)",
                    "processors": "",
                    "groups": "",
                    "action": "EnterForm1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b811c6b3-3c36-4d22-a05c-b042cfdc106a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnterForm3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00558549-3126-4cd5-9742-0b96d9cdab19",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnterForm3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08a1753d-4bcc-45c1-9b41-3d5e7f3acfae",
                    "path": "<HID::ASTRO Gaming ASTRO C40>/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnterForm3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f4842b6b-111f-4de6-9e86-9a852e332b28",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnterForm2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39ac3660-ccfc-4602-b84b-67202b9e17f4",
                    "path": "<HID::ASTRO Gaming ASTRO C40>/button7",
                    "interactions": "Press(pressPoint=1)",
                    "processors": "",
                    "groups": "",
                    "action": "EnterForm2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94680923-9f3e-41ce-bf31-45d1e0bab25a",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "Press(pressPoint=0.1)",
                    "processors": "",
                    "groups": "",
                    "action": "EnterForm2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "37bd499a-fecc-45dd-aa1c-37e940930b2a",
                    "path": "<HID::ASTRO Gaming ASTRO C40>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Strike",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b709cb23-6e76-426f-8a53-23f9b598059c",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Strike",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92789a0a-8947-472d-ab87-fd52fcd454cb",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Strike",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0527602-1657-41c2-ab72-77d43ba3f8f4",
                    "path": "<HID::ASTRO Gaming ASTRO C40>/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dda7994e-e32c-4107-8fbd-65a2832e5f8b",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13ca4c92-4350-4ad0-a3b5-8990b77b20cb",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}